--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"short_name":"nGastro","name":"nGastro Online Shop","icons":[],"start_url":"test/flex-table.html","display":"fullscreen"}
+{"short_name":"RPO","name":"RPO Pomorskie","icons":[],"start_url":"index.html","display":"fullscreen"}
